--- a/css/style.css
+++ b/css/style.css
@@ -529,6 +529,10 @@ footer{
     box-shadow: 0 0 10px rgba(255, 1, 1, 0.3);
     border: 2px solid rgba(255, 1, 1,0.3);
 }
+
+#send_form{
+    transition: all 1s ease-out;
+}
 .numeral>div>p{
 
 }
